Make sure to align videos to the top.

--- a/src/styles/components/_webrtc.scss
+++ b/src/styles/components/_webrtc.scss
@@ -113,7 +113,7 @@ max-width:100%;
 .remoteVideo {
 display: inline-block;
 width:100%;
-height:100%;
+max-height:100%;
 vertical-align:bottom;
 position:relative;
 visibility:hidden;
